--- a/events.html
+++ b/events.html
@@ -172,28 +172,12 @@
 <script>
   const events = [
     {
-      "date": "2025-06-05",
-      "time": "7:00 PM - 8:30 PM",
-      "title": "June Book Club: 'The Night Circus' by Erin Morgenstern",
+      "date": "2025-06-18",
+      "time": "6:00 PM - 7:30 PM",
+      "title": "Seasons Readings Book Club ~ Summer: 'Tom Lake' by Anne Patchett",
       "location": "The Town Bookstore - Community Room",
-      "description": "Join us for our monthly book club meeting to discuss 'The Night Circus' — a magical and mysterious tale. Refreshments provided.",
-      "rsvpLink": "mailto:lisa@townbookstore.com?subject=RSVP%20June%20Book%20Club"
-    },
-    {
-      "date": "2025-06-12",
-      "time": "4:00 PM - 6:00 PM",
-      "title": "Author Talk: Local Poet Jane Doe",
-      "location": "The Town Bookstore - Main Hall",
-      "description": "An intimate talk and reading by Jane Doe, featuring her new collection of poetry. Q&A to follow.",
-      "rsvpLink": "mailto:lisa@townbookstore.com?subject=RSVP%20Author%20Talk%20June"
-    },
-    {
-      "date": "2025-06-20",
-      "time": "3:00 PM - 4:30 PM",
-      "title": "Children’s Storytime",
-      "location": "Kids’ Corner",
-      "description": "Bring your little ones for a fun afternoon of stories and crafts.",
-      "rsvpLink": ""
+      "description": "Celebrate the start of summer with a special edition of our book club. We'll be discussing Anne Patchett's novel *Tom Lake* — a beautiful story of love, memory, and family. Light refreshments will be served.",
+      "rsvpLink": "mailto:lisa@townbookstore.com?subject=RSVP%20Seasons%20Readings%20Book%20Club"
     }
   ];
 
