--- a/about.html
+++ b/about.html
@@ -123,6 +123,15 @@
     .social-icons a:hover svg {
       fill: var(--hover-brown);
     }
+    /* Image styling */
+    .about-image {
+      width: 100%;
+      max-width: 800px;
+      margin: 1.5rem auto 2rem;
+      display: block;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
@@ -142,6 +151,8 @@
     <h2>About Us</h2>
 
     <p>Welcome to the longest running bookstore in Union County! According to the original business ledgers on display in the shop, The Town Book Store first opened its doors on September 4, 1934. After operating from the same address for 72 years, TBS relocated across the street in 2007 to 270 East Broad Street, the site of Westfield’s first library. In today’s rapidly changing retail environment, TBS remains a welcoming space where readers can find a first-rate literary selection and take a moment to slow down and browse. Whatever you’re looking for in your next book, our friendly and knowledgeable booksellers will steer you in the right direction.</p>
+
+    <img src="images/Image1.PNG" alt="Cozy interior of The Town Bookstore" class="about-image" />
 
     <p>Though modest in size, TBS's inventory is carefully curated and caters to the many interests of our customers. Individualized services like fast turnaround on special orders, author signings, out-of-print book searches, book club discounts and free gift wrapping are just part of the shop’s appeal. Our children’s section is full of popular favorites as well as unique and educational titles you won’t find anywhere else.</p>
 
