--- a/about.html
+++ b/about.html
@@ -147,6 +147,7 @@
     <h2>About Us</h2>
 
     <img src="images/Image1.PNG" alt="The Town Bookstore Interior" class="about-image" />
+    <img src="images/Image2.jpg" alt="Lisa and Staff at The Town Bookstore" class="about-image" />
 
     <p>Welcome to the longest running bookstore in Union County! According to the original business ledgers on display in the shop, The Town Book Store first opened its doors on September 4, 1934. After operating from the same address for 72 years, TBS relocated across the street in 2007 to 270 East Broad Street, the site of Westfield’s first library. In today’s rapidly changing retail environment, TBS remains a welcoming space where readers can find a first-rate literary selection and take a moment to slow down and browse. Whatever you’re looking for in your next book, our friendly and knowledgeable booksellers will steer you in the right direction.</p>
 
@@ -159,7 +160,7 @@
     <div class="contact-info">
       <p>Email: <a href="mailto:lisa@townbookstore.com">lisa@townbookstore.com</a></p>
       <p>Phone: <a href="tel:+19082333535">(908) 233-3535</a></p>
-      <p>Open Monday through Saturday 10am-5:30pm</p>
+      <p>Open Monday through Saturday 10am–5:30pm</p>
       <p class="social-icons">
         <a href="https://www.instagram.com/thetownbookstore/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
