--- a/shop.html
+++ b/shop.html
@@ -84,7 +84,6 @@
       margin-bottom: 1.5rem;
       letter-spacing: 1.5px;
       text-align: center;
-      font-family: 'Poppins', sans-serif;
     }
     p {
       color: var(--soft-brown);
@@ -95,6 +94,28 @@
       margin-left: auto;
       margin-right: auto;
       text-align: center;
+    }
+    .shop-image {
+      display: block;
+      max-width: 100%;
+      border-radius: 12px;
+      margin: 0 auto 2rem;
+      box-shadow: 0 4px 12px var(--shadow);
+    }
+    .photo-placeholder {
+      background: var(--accent-brown);
+      height: 200px;
+      width: 300px;
+      margin: 0 auto 2rem;
+      border-radius: 15px;
+      box-shadow: 0 6px 14px var(--shadow);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--cream);
+      font-size: 1.1rem;
+      font-weight: 600;
+      font-style: italic;
     }
     .links {
       display: flex;
@@ -116,21 +137,6 @@
     }
     .links a:hover {
       background: var(--hover-brown);
-    }
-    .photo-placeholder {
-      background: var(--accent-brown);
-      height: 200px;
-      width: 300px;
-      margin: 0 auto 2rem;
-      border-radius: 15px;
-      box-shadow: 0 6px 14px var(--shadow);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: var(--cream);
-      font-size: 1.1rem;
-      font-weight: 600;
-      font-style: italic;
     }
     footer {
       text-align: center;
@@ -160,7 +166,7 @@
     
     <p>We’re happy to offer a selection of print books and eBooks through our partnership with <a href="https://bookshop.org/shop/townbookstore" target="_blank" rel="noopener noreferrer">Bookshop.org</a>. You’ll find a curated range of titles that our customers love, with a portion of every purchase supporting The Town Bookstore.</p>
 
-    <div class="photo-placeholder">Photo of bookshelves or merch here</div>
+    <img src="images/Image3.jpg" alt="Bookshelves and Merch" class="shop-image" />
 
     <p>For audiobook lovers, we’ve also partnered with <a href="https://libro.fm/townbookstore" target="_blank" rel="noopener noreferrer">Libro.fm</a>, where you can browse and buy audiobooks while supporting independent bookstores like ours.</p>
 
