--- a/events.html
+++ b/events.html
@@ -1,207 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Events & Book Club - The Town Bookstore</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-<style>
-  :root {
-    --cream: #FDF8F3;
-    --warm-brown: #5A3E2B;
-    --soft-brown: #8B6F58;
-    --accent-brown: #A07A55;
-    --hover-brown: #7B5A3C;
-    --shadow: rgba(90, 62, 43, 0.15);
-  }
-  body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--cream);
-    color: var(--warm-brown);
-    line-height: 1.6;
-  }
-  header {
-    background-color: var(--cream);
-    padding: 1rem 3rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 2px 6px var(--shadow);
-    position: sticky;
-    top: 0;
-    z-index: 100;
-  }
-  header h1 {
-    font-weight: 600;
-    font-size: 1.8rem;
-    letter-spacing: 2px;
-    margin: 0;
-    cursor: default;
-  }
-  nav a {
-    color: var(--warm-brown);
-    text-decoration: none;
-    margin-left: 2rem;
-    font-weight: 600;
-    font-size: 1rem;
-    position: relative;
-    transition: color 0.3s ease;
-  }
-  nav a:hover {
-    color: var(--hover-brown);
-  }
-  nav a::after {
-    content: "";
-    display: block;
-    height: 2px;
-    width: 0%;
-    background: var(--hover-brown);
-    transition: width 0.3s ease;
-    position: absolute;
-    bottom: -5px;
-    left: 0;
-  }
-  nav a:hover::after {
-    width: 100%;
-  }
-  nav a[aria-current="page"] {
-    color: var(--hover-brown);
-    font-weight: 700;
-  }
-  main {
-    max-width: 800px;
-    margin: 3rem auto 5rem;
-    padding: 0 2rem;
-  }
-  h2 {
-    color: var(--warm-brown);
-    font-weight: 600;
-    font-size: 2.4rem;
-    margin-bottom: 1.8rem;
-    letter-spacing: 1.3px;
-    text-align: center;
-  }
-  .event-list {
-    list-style: none;
-    padding: 0;
-  }
-  .event-item {
-    background: white;
-    margin-bottom: 1.5rem;
-    padding: 1.8rem 2rem;
-    border-radius: 15px;
-    box-shadow: 0 5px 15px var(--shadow);
-    cursor: pointer;
-    transition: box-shadow 0.3s ease;
-  }
-  .event-item:hover {
-    box-shadow: 0 10px 25px var(--shadow);
-  }
-  .event-date {
-    font-weight: 700;
-    color: var(--accent-brown);
-    font-size: 1.1rem;
-    margin-bottom: 0.5rem;
-  }
-  .event-title {
-    font-size: 1.4rem;
-    font-weight: 600;
-    margin: 0 0 0.3rem 0;
-    color: var(--warm-brown);
-  }
-  .event-time-location {
-    font-size: 0.95rem;
-    color: var(--soft-brown);
-    margin-bottom: 1rem;
-  }
-  .event-description {
-    display: none;
-    font-size: 1rem;
-    color: var(--warm-brown);
-    margin-top: 1rem;
-    line-height: 1.4;
-  }
-  .event-rsvp {
-    margin-top: 1rem;
-  }
-  .event-rsvp a {
-    background-color: var(--accent-brown);
-    color: white;
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-    border-radius: 12px;
-    font-weight: 600;
-    transition: background-color 0.3s ease;
-  }
-  .event-rsvp a:hover {
-    background-color: var(--hover-brown);
-  }
-  footer {
-    text-align: center;
-    padding: 1.5rem 1rem;
-    color: var(--soft-brown);
-    font-size: 0.9rem;
-    border-top: 1px solid var(--soft-brown);
-    font-weight: 400;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Events & Book Club - The Town Bookstore</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    :root {
+      --cream: #FDF8F3;
+      --warm-brown: #5A3E2B;
+      --soft-brown: #8B6F58;
+      --accent-brown: #A07A55;
+      --hover-brown: #7B5A3C;
+      --shadow: rgba(90, 62, 43, 0.15);
+    }
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background-color: var(--cream);
+      color: var(--warm-brown);
+      line-height: 1.6;
+    }
+    header {
+      background-color: var(--cream);
+      padding: 1rem 3rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 6px var(--shadow);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+    header h1 {
+      font-weight: 600;
+      font-size: 1.8rem;
+      letter-spacing: 2px;
+      margin: 0;
+      cursor: default;
+    }
+    nav a {
+      color: var(--warm-brown);
+      text-decoration: none;
+      margin-left: 2rem;
+      font-weight: 600;
+      font-size: 1rem;
+      position: relative;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: var(--hover-brown);
+    }
+    nav a::after {
+      content: "";
+      display: block;
+      height: 2px;
+      width: 0%;
+      background: var(--hover-brown);
+      transition: width 0.3s ease;
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+    }
+    nav a:hover::after {
+      width: 100%;
+    }
+    nav a[aria-current="page"] {
+      color: var(--hover-brown);
+      font-weight: 700;
+    }
+    main {
+      max-width: 800px;
+      margin: 3rem auto 5rem;
+      padding: 0 2rem;
+    }
+    h2 {
+      color: var(--warm-brown);
+      font-weight: 600;
+      font-size: 2.4rem;
+      margin-bottom: 1.8rem;
+      letter-spacing: 1.3px;
+      text-align: center;
+    }
+    .event-list {
+      list-style: none;
+      padding: 0;
+    }
+    .event-item {
+      background: white;
+      margin-bottom: 1.5rem;
+      padding: 1.8rem 2rem;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px var(--shadow);
+      cursor: pointer;
+      transition: box-shadow 0.3s ease;
+    }
+    .event-item:hover {
+      box-shadow: 0 10px 25px var(--shadow);
+    }
+    .event-date {
+      font-weight: 700;
+      color: var(--accent-brown);
+      font-size: 1.1rem;
+      margin-bottom: 0.5rem;
+    }
+    .event-title {
+      font-size: 1.4rem;
+      font-weight: 600;
+      margin: 0 0 0.3rem 0;
+      color: var(--warm-brown);
+    }
+    .event-time-location {
+      font-size: 0.95rem;
+      color: var(--soft-brown);
+      margin-bottom: 1rem;
+    }
+    .event-description {
+      display: none;
+      font-size: 1rem;
+      color: var(--warm-brown);
+      margin-top: 1rem;
+      line-height: 1.4;
+    }
+    .event-rsvp {
+      margin-top: 1rem;
+    }
+    .event-rsvp a {
+      background-color: var(--accent-brown);
+      color: white;
+      padding: 0.5rem 1rem;
+      text-decoration: none;
+      border-radius: 12px;
+      font-weight: 600;
+      transition: background-color 0.3s ease;
+    }
+    .event-rsvp a:hover {
+      background-color: var(--hover-brown);
+    }
+    footer {
+      text-align: center;
+      padding: 1.5rem 1rem;
+      color: var(--soft-brown);
+      font-size: 0.9rem;
+      border-top: 1px solid var(--soft-brown);
+      font-weight: 400;
+    }
+    .event-img {
+      display: block;
+      max-width: 100%;
+      margin: 0 auto 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px var(--shadow);
+    }
+  </style>
 </head>
 <body>
-<header>
-  <h1>The Town Bookstore</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="shop.html">Shop</a>
-    <a href="staff-picks.html">Staff Picks</a>
-    <a href="indie-authors.html">Indie Authors</a>
-    <a href="events.html" aria-current="page">Events</a>
-  </nav>
-</header>
+  <header>
+    <h1>The Town Bookstore</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="shop.html">Shop</a>
+      <a href="staff-picks.html">Staff Picks</a>
+      <a href="indie-authors.html">Indie Authors</a>
+      <a href="events.html" aria-current="page">Events</a>
+    </nav>
+  </header>
 
-<main>
-  <h2>Events & Book Club</h2>
-  <ul id="eventList" class="event-list"></ul>
-</main>
+  <main>
+    <h2>Events & Book Club</h2>
 
-<footer>
-  &copy; 2025 The Town Bookstore &nbsp;|&nbsp; 270 East Broad Street, Westfield, NJ &nbsp;|&nbsp; (908) 233-3535
-</footer>
+    <img src="images/Image4.jpg" alt="Book club or event photo" class="event-img" />
 
-<script>
-  const events = [
-    {
-      "date": "2025-06-18",
-      "time": "6:00 PM - 7:30 PM",
-      "title": "Seasons Readings Book Club ~ Summer: 'Tom Lake' by Anne Patchett",
-      "location": "The Town Bookstore - Community Room",
-      "description": "Celebrate the start of summer with a special edition of our book club. We'll be discussing Anne Patchett's novel *Tom Lake* — a beautiful story of love, memory, and family. Light refreshments will be served.",
-      "rsvpLink": "mailto:lisa@townbookstore.com?subject=RSVP%20Seasons%20Readings%20Book%20Club"
-    }
-  ];
+    <ul id="eventList" class="event-list"></ul>
+  </main>
 
-  const eventList = document.getElementById('eventList');
+  <footer>
+    &copy; 2025 The Town Bookstore &nbsp;|&nbsp; 270 East Broad Street, Westfield, NJ &nbsp;|&nbsp; (908) 233-3535
+  </footer>
 
-  events.forEach(event => {
-    const li = document.createElement('li');
-    li.classList.add('event-item');
+  <script>
+    const events = [
+      {
+        "date": "2025-06-18",
+        "time": "6:00 PM - 7:30 PM",
+        "title": "Seasons Readings Book Club ~ Summer: 'Tom Lake' by Anne Patchett",
+        "location": "The Town Bookstore - Community Room",
+        "description": "Celebrate the start of summer with a special edition of our book club. We'll be discussing Anne Patchett's novel *Tom Lake* — a beautiful story of love, memory, and family. Light refreshments will be served.",
+        "rsvpLink": "mailto:lisa@townbookstore.com?subject=RSVP%20Seasons%20Readings%20Book%20Club"
+      }
+    ];
 
-    li.innerHTML = `
-      <div class="event-date">${new Date(event.date).toLocaleDateString(undefined, {weekday: 'short', month: 'short', day: 'numeric', year:'numeric'})}</div>
-      <h3 class="event-title">${event.title}</h3>
-      <div class="event-time-location">${event.time} | ${event.location}</div>
-      <div class="event-description">${event.description}</div>
-      ${event.rsvpLink ? `<div class="event-rsvp"><a href="${event.rsvpLink}">RSVP / Join</a></div>` : ''}
-    `;
+    const eventList = document.getElementById('eventList');
 
-    li.addEventListener('click', () => {
-      const desc = li.querySelector('.event-description');
-      desc.style.display = desc.style.display === 'block' ? 'none' : 'block';
+    events.forEach(event => {
+      const li = document.createElement('li');
+      li.classList.add('event-item');
+
+      li.innerHTML = `
+        <div class="event-date">${new Date(event.date).toLocaleDateString(undefined, {weekday: 'short', month: 'short', day: 'numeric', year:'numeric'})}</div>
+        <h3 class="event-title">${event.title}</h3>
+        <div class="event-time-location">${event.time} | ${event.location}</div>
+        <div class="event-description">${event.description}</div>
+        ${event.rsvpLink ? `<div class="event-rsvp"><a href="${event.rsvpLink}">RSVP / Join</a></div>` : ''}
+      `;
+
+      li.addEventListener('click', () => {
+        const desc = li.querySelector('.event-description');
+        desc.style.display = desc.style.display === 'block' ? 'none' : 'block';
+      });
+
+      eventList.appendChild(li);
     });
-
-    eventList.appendChild(li);
-  });
-</script>
+  </script>
 </body>
 </html>
