--- a/shop.html
+++ b/shop.html
@@ -84,6 +84,7 @@
       margin-bottom: 1.5rem;
       letter-spacing: 1.5px;
       text-align: center;
+      font-family: 'Poppins', sans-serif;
     }
     p {
       color: var(--soft-brown);
@@ -95,27 +96,12 @@
       margin-right: auto;
       text-align: center;
     }
-    .shop-image {
+    img.shop-image {
       display: block;
+      margin: 2rem auto;
       max-width: 100%;
       border-radius: 12px;
-      margin: 0 auto 2rem;
-      box-shadow: 0 4px 12px var(--shadow);
-    }
-    .photo-placeholder {
-      background: var(--accent-brown);
-      height: 200px;
-      width: 300px;
-      margin: 0 auto 2rem;
-      border-radius: 15px;
       box-shadow: 0 6px 14px var(--shadow);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: var(--cream);
-      font-size: 1.1rem;
-      font-weight: 600;
-      font-style: italic;
     }
     .links {
       display: flex;
@@ -166,11 +152,9 @@
     
     <p>We’re happy to offer a selection of print books and eBooks through our partnership with <a href="https://bookshop.org/shop/townbookstore" target="_blank" rel="noopener noreferrer">Bookshop.org</a>. You’ll find a curated range of titles that our customers love, with a portion of every purchase supporting The Town Bookstore.</p>
 
-    <img src="images/Image3.jpg" alt="Bookshelves and Merch" class="shop-image" />
+    <img src="images/Image3.jpg" alt="Bookshelves and shop interior" class="shop-image" />
 
     <p>For audiobook lovers, we’ve also partnered with <a href="https://libro.fm/townbookstore" target="_blank" rel="noopener noreferrer">Libro.fm</a>, where you can browse and buy audiobooks while supporting independent bookstores like ours.</p>
-
-    <div class="photo-placeholder">Photo of audiobook app or headphones here</div>
 
     <p><em>Note: These are online purchases and may not reflect our in-store inventory. If you want to request a specific book or special order, please contact us directly.</em></p>
 
