--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       width: 100%;
     }
     .hero {
-      background-image: url('https://images.unsplash.com/photo-1512820790803-83ca734da794?auto=format&fit=crop&w=1470&q=80');
+      background-image: url('images/Image2.jpg');
       background-size: cover;
       background-position: center;
       height: 420px;
@@ -89,15 +89,9 @@
     .hero h2 {
       font-size: 3.4rem;
       font-weight: 600;
-      margin: 0 0 1rem;
+      margin: 0;
       text-shadow: 0 2px 6px rgba(0,0,0,0.3);
       letter-spacing: 2px;
-    }
-    .hero p {
-      font-size: 1.3rem;
-      font-weight: 400;
-      line-height: 1.4;
-      text-shadow: 0 1px 4px rgba(0,0,0,0.25);
     }
     main {
       max-width: 900px;
@@ -150,7 +144,6 @@
       border-top: 1px solid var(--soft-brown);
       font-weight: 400;
     }
-    /* Vintage detail: small hand-drawn style underline for headings */
     section h3::after {
       content: "";
       display: block;
@@ -161,7 +154,6 @@
       border-radius: 2px;
       filter: drop-shadow(0 1px 0 rgba(255,255,255,0.3));
     }
-    /* New newsletter section */
     .newsletter-section {
       max-width: 900px;
       margin: 0 auto 4rem;
@@ -203,10 +195,9 @@
     </nav>
   </header>
 
-  <section class="hero" role="banner" aria-label="Cozy bookstore banner image">
+  <section class="hero" role="banner" aria-label="Bookstore exterior banner">
     <div class="hero-content">
       <h2>Welcome to The Town Bookstore</h2>
-      <p>Your cozy corner for timeless stories and new adventures</p>
     </div>
   </section>
 
